Working on fixing scrollbar

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -38,6 +38,11 @@ $sort-direction-color: royalblue;
 .rvt {
   width: 100%;
 
+  .rvt-table-container,
+  .rvt-virtual-table-container {
+    position: relative;
+  }
+
   .rvt-virtual-table-container {
     overflow-x: auto;
     overflow-y: visible;
